# open-sse

./: .dockerignore  .gitignore  Broker.dockerfile  Cargo.toml  Dockerfile  Server.dockerfile  skaffold.yaml
.github/workflows/: release.yml
actix-web-utils/: Cargo.toml
actix-web-utils/src/: cors.rs  header_macros.rs  lib.rs
app-ops/: Cargo.toml
app-ops/src/: lib.rs  logging.rs  ops_endpoints.rs  readiness.rs  settings_loader.rs  startup.rs
app-ops/src/utils/: grpc_settings.rs  http_settings.rs  mod.rs  network.rs
broker/: Cargo.toml
broker-protobufs/: Cargo.toml  build.rs
broker-protobufs/protos/: api_v0_1_x.proto
broker-protobufs/src/: contracts_broker_v0_1_x.rs  lib.rs
broker/src/: application.rs  clients_service.rs  contracts.rs  main.rs  readiness_checks.rs  redis_helpers.rs  settings.rs
broker/src/mappers/: app_settings_mappers.rs
broker/src/routes/: clients.rs
config/open-sse-broker/: default.toml
config/open-sse-server/: default.toml
infra/broker/: deployment.yaml  local.yaml
infra/client-register/: local.yaml
infra/server/: local.yaml
infra/webclient/: deployment.yaml
server/: Cargo.toml  Readme.MD
server/src/: application.rs  contracts.rs  logging.rs  main.rs  process_control.rs  readiness_checks.rs  settings.rs  sse_exchange.rs  sse_exchange_tests.rs
server/src/mappers/: app_settings_mappers.rs
server/src/routes/: clients.rs  diagnostics.rs  mod.rs  operations.rs
webclient/: .proxyrc  App.tsx  Dockerfile  index.html  package-lock.json  package.json  ping.js  server.js
