[package]
name = "app-ops"
version = "0.1.0"
authors = ["kahgeh <kahgeh@hotmail.com>"]
edition = "2018"

[dependencies]
config = "0.11"
actix-web = "4.0.0-beta.8"
actix-service = "2.0.0"
serde={version="1", features = [ "rc"] }
serde_json = "1.0.64"
time={version="0.3.0-alpha-2", features = ["formatting"] }
tracing= { version="0.1.26", features=["async-await"] }
tracing-futures="0.2.5"
tracing-subscriber = "0.2.19"
tracing-bunyan-formatter = "0.2.4"
tracing-actix-web = "0.4.0-beta.7"
tokio= {version="1.8.0", features=["full"]}
derive_more = "0.99.14"
nix="0.22.0"

