[package]
name = "open-sse-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.8"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = {version="1.19.2", features=["full"]} 
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] } 
tracing = {version="0.1.35", features=["async-await"]}
tracing-opentelemetry = "0.17.3"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] } 
tracing-tree = "0.2.1"
